// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Component frames an empty reflection 1`] = `<div />`;

exports[`Component renders reflection with styles 1`] = `
<Mirror
  reflect={<div />}
>
  <div />
</Mirror>
`;

exports[`Hook returns an empty reflection 1`] = `
<Mirror
  reflect={null}
/>
`;

exports[`Hook starts reflecting node 1`] = `
<Mirror
  reflect={<div />}
/>
`;
